crates/main/amethystate/tests/snapshots/kv__kv_asked_for_a_second_type_json.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: shape(why)
---
the store could not read
├╴store: <store>
├╴key: ui.width
│
├─▶ the value could not be encoded or decoded
│   ╰╴key: ui.width
│
├─▶ Erased codec error: invalid type: integer `800`, expected a string at line 1 column 3
│
╰─▶ invalid type: integer `800`, expected a string at line 1 column 3
