crates/main/amethystate/tests/snapshots/kv__kv_asked_for_a_second_type_ron.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: shape(&err)
---
the store could not carry out the write
├╴key: ui.width
│
├─▶ the store could not read
│   ├╴store: <store>
│   ╰╴key: ui.width
│
├─▶ the value could not be encoded or decoded
│   ╰╴key: ui.width
│
├─▶ Erased codec error: Expected a string but found the unsigned integer `800` instead
│
╰─▶ Expected a string but found the unsigned integer `800` instead
