crates/main/amethystate/tests/snapshots/kv__kv_cell_over_a_declared_field.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: said
---
a kv handle wants typed.port, which Typed already holds
