crates/main/amethystate/tests/snapshots/kv__kv_map_over_a_declared_field.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: said
---
a kv handle wants typed, which Typed already holds through typed.port
