crates/main/amethystate/tests/snapshots/kv__kv_remove_over_a_declared_field.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: said
---
typed.port is declared by Typed
