crates/main/amethystate/tests/snapshots/kv__kv_write_over_a_declared_field.snap
---
source: crates/main/amethystate/tests/kv.rs
expression: err.to_string()
---
typed.port is declared by Typed
